--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
 install:
 - go mod download
 script:
-- golangci-lint run --enable-all -D gochecknoglobals
+- golangci-lint run --enable-all -D gochecknoglobals -e gomnd
 - go test ./...
