--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
 - curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin latest
 script:
 - go test ./...
-- golangci-lint run --enable-all -D gochecknoglobals -D gomnd
+- golangci-lint run --enable-all
